@@ -1,3 +1,9 @@
+2013-12-12  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR middle-end/59470
+	* lra-coalesce.c (lra_coalesce): Invalidate inheritance pseudo
+	values if necessary.
+
 2013-12-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR libgomp/59467
